objects/Invoice_Compliance_Document__c.object
<CustomObject>
    <fields>
        <fullName>Account_Name__c</fullName>
        <description>Case# 00612946_Approval Notification and Audit Dashboard for TPS Third Party Seller Program - NY.
used in email template</description>
        <formula>Financial_Payment__r.Account__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Owner__c</fullName>
        <description>Need Account Owner on the Invoice Document Proceed Email template</description>
        <formula>Financial_Payment__r.Account__r.x_Account_Owner__r.FirstName + &apos; &apos; + Financial_Payment__r.Account__r.x_Account_Owner__r.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Owner</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Approved_Notification__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Approved Notification</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Attachment_Link__c</fullName>
        <formula>IF(  

     AND(ISBLANK(Link_to_Attachment__c),   ISPICKVAL(Status__c, &quot;Approved&quot;) ) , 

     &quot;File has been archived&quot;,  


          IF(ISPICKVAL(Status__c, &quot;Not Submitted&quot;), 

          NULL, HYPERLINK( Link_to_Attachment__c ,&quot;Click to View&quot;) 

)
)</formula>
        <label>Attachment Link</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Date_Delivered__c</fullName>
        <description>Financial_Payment__r.Date_Delivered__c</description>
        <label>Date Delivered</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Document_Owner_Category__c</fullName>
        <description>Case# 00612946_Approval Notification and Audit Dashboard for TPS Third Party Seller Program - NY. 
used in report</description>
        <formula>IF(ISBLANK(TEXT(Document_Owner__c)), null, TEXT(Document_Owner__c) &amp; &apos; &apos; &amp; Payment_Category__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Document Owner Category</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Document_Owner__c</fullName>
        <description>Responsible Party for Document upload</description>
        <label>Document Owner</label>
        <picklist>
            <picklistValues>
                <fullName>TPS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DRIP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IP</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Document_Submitted__c</fullName>
        <label>Document Submitted</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Documents_in_File__c</fullName>
        <label>Documents in File</label>
        <picklist>
            <picklistValues>
                <fullName>Install Invoice</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Confirmed ICF</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Design Plan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Final Permits</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Photos</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Signed Copy of Proposal</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>FPO_Record_Type__c</fullName>
        <description>case 00848075</description>
        <formula>Financial_Payment__r.RecordType.DeveloperName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>FPO Record Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>File_Name__c</fullName>
        <label>File Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Financial_Payment_Link__c</fullName>
        <description>Created to provide the Financial Payment link in the email template .</description>
        <formula>HYPERLINK(Left($Api.Enterprise_Server_URL_190,(find(&apos;/services&apos;,$Api.Enterprise_Server_URL_190))) + Financial_Payment__c, Left($Api.Enterprise_Server_URL_190,(find(&apos;/services&apos;,$Api.Enterprise_Server_URL_190))) + Financial_Payment__c, Financial_Payment__r.Name)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Financial Payment Link</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Financial_Payment__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Financial Payment</label>
        <referenceTo>LeasePayment__c</referenceTo>
        <relationshipLabel>Invoice Compliance Documents</relationshipLabel>
        <relationshipName>Invoice_Compliance_Documents</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Financier__c</fullName>
        <description>for case# 00761334</description>
        <formula>Text(Financial_Payment__r.Funding_Tranche__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Financier</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FinancingType__c</fullName>
        <label>Financing Type</label>
        <picklist>
            <picklistValues>
                <fullName>Lease</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NH Lease</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Install_Payment_Approved__c</fullName>
        <formula>Financial_Payment__r.Install_Pymnt_Apprvd__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Install Payment Approved</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Interconnect_Payment_Approved__c</fullName>
        <formula>Financial_Payment__r.Intrcnct_Pymnt_Apprvd__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Interconnect Payment Approved</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Invoice_Admin__c</fullName>
        <formula>Financial_Payment__r.Invoice_Admin__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Invoice Admin</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Invoice_Document_Data__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>look up to IDD and track what all IDD created for a project.</description>
        <label>Invoice Document Data</label>
        <referenceTo>Invoice_Document_Data__c</referenceTo>
        <relationshipLabel>Invoice Compliance Documents</relationshipLabel>
        <relationshipName>Invoice_Compliance_Documents</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Invoice_Document_Email__c</fullName>
        <label>Invoice Document Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Invoice_Type__c</fullName>
        <label>Invoice Type</label>
        <picklist>
            <picklistValues>
                <fullName>Install</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Interconnect</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Origination</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Permit Received</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Lease_Payment_Status__c</fullName>
        <formula>Text(Financial_Payment__r.Status__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Lease Payment Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lease__c</fullName>
        <formula>Financial_Payment__r.Lease__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Lease #</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Link_to_Attachment__c</fullName>
        <label>Link to Attachment</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Location__c</fullName>
        <label>Document Upload Location</label>
        <picklist>
            <picklistValues>
                <fullName>Account</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Opportunity</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Residential Project</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Invoice Document</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Mosaic_Status__c</fullName>
        <label>Mosaic Status</label>
        <picklist>
            <picklistValues>
                <fullName>Upload Success</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Upload Failed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mosaic Approved</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Not_Required_for_Approval__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Not Required for Approval</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Notes_to_Approver__c</fullName>
        <label>Notes to Approver</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Notes_to_Partner__c</fullName>
        <label>Notes to Partner</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Number_of_Times_Rejected__c</fullName>
        <description>Count for rejection times - For the ICD Status Changed Reason</description>
        <label>Number of Times Rejected</label>
        <summaryForeignKey>ICD_Status_Changed_Reason__c.Invoice_Compliance_Document__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Oracle_Vendor_Email_Formula__c</fullName>
        <formula>Financial_Payment__r.Partner_Oracle_Vendor_Email__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Oracle Vendor Email ( Formula)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Oracle_Vendor_Email__c</fullName>
        <label>Oracle Vendor Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Oracle_Vendor_Number__c</fullName>
        <formula>Financial_Payment__r.Partner_Account__r.Oracle_Vendor_Number__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Oracle Vendor Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Partner_Comments__c</fullName>
        <description>Field used by the Invoice Document object to allow the partners to write in comments on the documents that they upload.</description>
        <label>Partner Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Partner_Type__c</fullName>
        <formula>TEXT(Financial_Payment__r.Partner_Account__r.Type)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Partner Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Partner__c</fullName>
        <formula>IF( ISPICKVAL(Program__c,&apos;TPS&apos;), null, Financial_Payment__r.Dealer_Name__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Partner</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Payment_Category__c</fullName>
        <description>Case# 00612946_Approval Notification and Audit Dashboard for TPS Third Party Seller Program - NY. 
used in report</description>
        <formula>CASE(TEXT(Invoice_Type__c), 
&apos;Interconnect&apos;, &apos;20 %&apos;,
&apos;80 %&apos;)</formula>
        <label>Payment Category</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Program__c</fullName>
        <description>Defines the program for which this document is created. Ex:- TPS</description>
        <label>Program</label>
        <picklist>
            <picklistValues>
                <fullName>TPS</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Project_Task__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Project Task</label>
        <referenceTo>Project_Task__c</referenceTo>
        <relationshipLabel>Invoice Compliance Documents</relationshipLabel>
        <relationshipName>Invoice_Compliance_Documents</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>RSM__c</fullName>
        <formula>Financial_Payment__r.RSM__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>RSM</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Re_submitted__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Historical</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Residential_Project__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Residential Project</label>
        <referenceTo>Residential_Project__c</referenceTo>
        <relationshipLabel>Invoice Compliance Documents</relationshipLabel>
        <relationshipName>Invoice_Compliance_Documents</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Response_Date__c</fullName>
        <label>Response Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Responsible_Partner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Partner responsible to upload this document</description>
        <label>Responsible Partner</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Invoice Compliance Documents</relationshipLabel>
        <relationshipName>Invoice_Compliance_Documents</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SMS_ID__c</fullName>
        <formula>Financial_Payment__r.SMS_ID__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>SMS ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Shared_With__c</fullName>
        <description>Other Parties this document should be shared with</description>
        <label>Shared With</label>
        <picklist>
            <picklistValues>
                <fullName>TPS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DRIP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IP</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Sharing_Type__c</fullName>
        <description>Defines the sharing setup of the object(Secure or Shared)</description>
        <label>Sharing Type</label>
        <picklist>
            <picklistValues>
                <fullName>Secure</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Shared</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>State__c</fullName>
        <formula>Financial_Payment__r.Site_State_Prov__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>State</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Pending</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Approved</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rejected</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not Submitted</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Legacy Rejected</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <description>Defines the type. Document or a Task. Task are also being tracked as part of Invoice document data starting from TPS project</description>
        <label>Event Type</label>
        <picklist>
            <picklistValues>
                <fullName>Document</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Task</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>UpdateSharing__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field is used to invoke the ICD Sharing logic so doc sharing is updated when needed.</description>
        <label>UpdateSharing</label>
        <type>Checkbox</type>
    </fields>
    <label>Invoice Compliance Document</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Invoice Compliance Documents</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <sharingReasons>
        <fullName>Document_Owner_Partner__c</fullName>
        <label>Document Owner Partner</label>
    </sharingReasons>
    <sharingReasons>
        <fullName>Shared_With_Partner__c</fullName>
        <label>Shared With Partner</label>
    </sharingReasons>
</CustomObject>